[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "huntkit"
version = "0.1.0"
description = "Local bug bounty recon & methodology copilot for authorised testing."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Raresney" }]
keywords = ["bugbounty", "recon", "security", "pentest", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
pretty = ["rich>=13.0"]

[project.scripts]
huntkit = "huntkit.cli:main"

[project.urls]
Homepage = "https://github.com/Raresney/HuntKit"

[tool.setuptools]
packages = ["huntkit"]
