[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "huntkit"
version = "0.2.0-dev"
description = "Local-first bug bounty recon, methodology & workflow framework for authorised testing."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Raresney" }]
keywords = ["bugbounty", "recon", "security", "pentest", "cli", "osint", "framework"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ai = ["httpx>=0.27"]          # optional: cloud AI providers
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "pre-commit>=3.7",
]

[project.scripts]
# The Typer app (huntkit.app) is reachable via `python -m huntkit`. The
# console script stays on the legacy CLI until the new interface reaches
# parity (scan/report/ideas), so no command regresses mid-redesign.
huntkit = "huntkit.cli:main"

[project.urls]
Homepage = "https://github.com/Raresney/HuntKit"
Repository = "https://github.com/Raresney/HuntKit"
Issues = "https://github.com/Raresney/HuntKit/issues"

[tool.setuptools.packages.find]
include = ["huntkit*"]

[tool.setuptools.package-data]
huntkit = ["py.typed", "data/**/*"]

# ---- tooling -------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["huntkit"]
omit = ["huntkit/cli.py", "*/__main__.py"]
